tests/snapshots/rendering__adjacent_bold_italic.snap
---
source: tests/rendering.rs
expression: "render(\"**bold***italic*\")"
---
[bold]bold[/intensity][italic]italic[/italic]
