tests/snapshots/rendering__bare_autolink.snap
---
source: tests/rendering.rs
expression: "render(\"<https://example.com>\")"
---
[underline]https://example.com[/underline][dim] (https://example.com)[/intensity]
