tests/snapshots/rendering__blockquote_simple.snap
---
source: tests/rendering.rs
expression: "render(\"> This is a quote.\")"
---
[dim][italic][dim]│ [/intensity][dim][italic]This is a quote.
[/italic][/intensity]
