tests/snapshots/rendering__blockquote_with_emphasis.snap
---
source: tests/rendering.rs
expression: "render(\"> This has **bold** in a quote.\")"
---
[dim][italic][dim]│ [/intensity][dim][italic]This has[bold] bold[/intensity][dim] in a quote.
[/italic][/intensity]
