tests/snapshots/rendering__bold_entire_paragraph.snap
---
source: tests/rendering.rs
expression: "render(\"**Everything is bold here.**\")"
---
[bold]Everything is bold here.[/intensity]
