tests/snapshots/rendering__bold_italic_text.snap
---
source: tests/rendering.rs
expression: "render(\"This is ***bold italic*** text.\")"
---
This is[italic][bold] bold italic[/intensity][/italic] text.
