tests/snapshots/rendering__bold_text.snap
---
source: tests/rendering.rs
expression: "render(\"This is **bold** text.\")"
---
This is[bold] bold[/intensity] text.
