tests/snapshots/rendering__code_block_basic.snap
---
source: tests/rendering.rs
expression: "render(\"```\\nfn main() {\\n    println!(\\\"hello\\\");\\n}\\n```\")"
---
[code]  fn main() {
      println!("hello");
  }
[/color]
