tests/snapshots/rendering__code_block_between_paragraphs.snap
---
source: tests/rendering.rs
expression: "render(\"Before.\\n\\n```\\ncode\\n```\\n\\nAfter.\")"
---
Before.

[code]  code
[/color]
After.
